lib_LIBRARIES = \
	libbtutils.a

libbtutils_a_SOURCES = \
	bench-json.h \
	bencoding.h \
	bencoding.cpp \
	bencparser.h \
	bencparser.cpp \
	bitfield.h \
	bitfield.cpp \
	bloom_filter.h \
	bloom_filter.cpp \
	DecodeEncodedString.h \
	DecodeEncodedString.cpp \
	endian_utils.h \
	enumtype.h \
	get_microseconds.h \
	get_microseconds.cpp \
	inet_ntop.h \
	inet_ntop.cpp \
	interlock.h \
	interlock.cpp \
	invariant_check.hpp \
	RefBase.h \
	RefBase.cpp \
	sha1_hash.h \
	smart_ptr.h \
	snprintf.h \
	snprintf.cpp \
	sockaddr.h \
	sockaddr.cpp \
	tailqueue.h \
	target.h \
	udp_utils.h \
	udp_utils.cpp \
	utypes.h

libbtutils_a_CXXFLAGS = -std=c++11
